..F....... [ZBX-22397] fixed disabled input field text color on Safari
Merge in ZBX/zabbix from feature/ZBX-22397-5.0 to release/5.0

* commit 'e54bf4eeb1dbafe536c0a340ccc708b199bf1533':
  ..F....... [ZBX-22397] fixed readonly input and textarea for safari
  ..F....... [ZBX-22397] fixed the way how Safari specific CSS is actually applied to inputs
  ..F....... [ZBX-22397] fixed disabled input field text color on Safari

(cherry picked from commit 0bbf8bf9aa51f8d58d10112f772a0cb94304f4bd)

--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -4235,10 +4235,23 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
 
 .radio-list-control input[type="radio"][disabled] + label, z-select[disabled] button,
 .z-select[disabled] button, z-select[readonly] button,
-.z-select[readonly] button, .multiselect[aria-disabled], input[disabled], input[readonly], textarea[disabled], textarea[readonly], select option[disabled], select[disabled], select[readonly], .checkbox-radio[readonly] span, .checkbox-radio[readonly] + label span, .checkbox-radio[disabled] + label span, .macro-input-group button.btn-dropdown-toggle:disabled {
+.z-select[readonly] button, .multiselect[aria-disabled], input[disabled], input[readonly], textarea[disabled], textarea[readonly], select option[disabled], select[disabled], select[readonly], .checkbox-radio[readonly] span, .checkbox-radio[readonly] + label span, .checkbox-radio[disabled] + label span, .safari input[readonly],
+.safari textarea[readonly], .macro-input-group button.btn-dropdown-toggle:disabled {
   color: #acbbc2;
   background-color: #ebebeb !important;
   border-color: #ccd5d9; }
+
+/* This is a hack to define the color for disabled input elements on Safari. Other browsers uses 'color' instead. */
+.safari .radio-list-control input[type="radio"][disabled] + label, .radio-list-control .safari input[type="radio"][disabled] + label, .safari z-select[disabled] button, z-select[disabled] .safari button,
+.safari .z-select[disabled] button,
+.z-select[disabled] .safari button, .safari z-select[readonly] button, z-select[readonly] .safari button,
+.safari .z-select[readonly] button,
+.z-select[readonly] .safari button, .safari .multiselect[aria-disabled], .safari input[disabled], .safari textarea[disabled], .safari select option[disabled], select .safari option[disabled], .safari select[disabled], .safari select[readonly], .safari .checkbox-radio[readonly] span, .checkbox-radio[readonly] .safari span, .safari .checkbox-radio[readonly] + label span, .checkbox-radio[readonly] + label .safari span, .safari .checkbox-radio[disabled] + label span, .checkbox-radio[disabled] + label .safari span, .safari input[readonly],
+.safari textarea[readonly], .safari .macro-input-group button.btn-dropdown-toggle:disabled, .macro-input-group .safari button.btn-dropdown-toggle:disabled {
+  -webkit-text-fill-color: #acbbc2; }
+.safari input[readonly],
+.safari textarea[readonly] {
+  -webkit-text-fill-color: #1f2c33 !important; }
 
 .inaccessible .subfilter-enabled {
   color: #bfbfbf; }
