--- a/ui/assets/styles/hc-dark.css
+++ b/ui/assets/styles/hc-dark.css
@@ -4201,10 +4201,23 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
 
 .radio-list-control input[type="radio"][disabled] + label, z-select[disabled] button,
 .z-select[disabled] button, z-select[readonly] button,
-.z-select[readonly] button, .multiselect[aria-disabled], input[disabled], input[readonly], textarea[disabled], textarea[readonly], select option[disabled], select[disabled], select[readonly], .checkbox-radio[readonly] span, .checkbox-radio[readonly] + label span, .checkbox-radio[disabled] + label span, .macro-input-group button.btn-dropdown-toggle:disabled {
+.z-select[readonly] button, .multiselect[aria-disabled], input[disabled], input[readonly], textarea[disabled], textarea[readonly], select option[disabled], select[disabled], select[readonly], .checkbox-radio[readonly] span, .checkbox-radio[readonly] + label span, .checkbox-radio[disabled] + label span, .safari input[readonly],
+.safari textarea[readonly], .macro-input-group button.btn-dropdown-toggle:disabled {
   color: #7d7d7d;
   background-color: #000000 !important;
   border-color: #5a5a5a; }
+
+/* This is a hack to define the color for disabled input elements on Safari. Other browsers uses 'color' instead. */
+.safari .radio-list-control input[type="radio"][disabled] + label, .radio-list-control .safari input[type="radio"][disabled] + label, .safari z-select[disabled] button, z-select[disabled] .safari button,
+.safari .z-select[disabled] button,
+.z-select[disabled] .safari button, .safari z-select[readonly] button, z-select[readonly] .safari button,
+.safari .z-select[readonly] button,
+.z-select[readonly] .safari button, .safari .multiselect[aria-disabled], .safari input[disabled], .safari textarea[disabled], .safari select option[disabled], select .safari option[disabled], .safari select[disabled], .safari select[readonly], .safari .checkbox-radio[readonly] span, .checkbox-radio[readonly] .safari span, .safari .checkbox-radio[readonly] + label span, .checkbox-radio[readonly] + label .safari span, .safari .checkbox-radio[disabled] + label span, .checkbox-radio[disabled] + label .safari span, .safari input[readonly],
+.safari textarea[readonly], .safari .macro-input-group button.btn-dropdown-toggle:disabled, .macro-input-group .safari button.btn-dropdown-toggle:disabled {
+  -webkit-text-fill-color: #7d7d7d; }
+.safari input[readonly],
+.safari textarea[readonly] {
+  -webkit-text-fill-color: #ffffff !important; }
 
 .inaccessible .subfilter-enabled {
   color: #bfbfbf; }
